@@ -207,6 +207,10 @@ Shorewall 4.4.2
     d)  RFC1918_STRICT=Yes no loger produces a fatal error -- it is now
         a warning.
 
+6)  Previously, it was not possible to specify an IP address range in
+    ADDRESS column of /etc/shorewall/masq. Thanks go to Jessee Shrieve
+    for the patch.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
