@@ -18,6 +18,8 @@ Changes in Shorewall 4.4.2
 
 8)  Don't look for an extension script for built-in actions.
 
+9)  Apply Jesse Shrieve's patch for SNAT range.
+
 Changes in Shorewall 4.4.1
 
 1)  Deleted extra 'use ...IPAddrs.pm' from Nat.pm.
